--- a/OpenT2/OpenT2.csproj
+++ b/OpenT2/OpenT2.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.4.4"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0-preview.5.21301.9"/>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0-preview.5.21301.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0-preview.5.21301.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -13,17 +13,19 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0-preview5"/>
-    <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.0.0-beta.2"/>
-    <PackageReference Include="OpenTelemetry" Version="1.1.0-rc1"/>
-    <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-rc1"/>
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc6"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNet" Version="1.0.0-rc6"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc6"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc6"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc6"/>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4"/>
-    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0-preview.5.21301.5"/>
-    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.1.0-rc1"/>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0-preview5" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="1.0.0-beta.2" />
+    <PackageReference Include="OpenTelemetry" Version="1.1.0-rc1" />
+    <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-rc1" />
+    <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.0.1" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc6" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNet" Version="1.0.0-rc6" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc6" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc6" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0-preview.5.21301.5" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.1.0-rc1" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.1.0-rc1" />
   </ItemGroup>
 </Project>
