--- a/OpenT2/appsettings.json
+++ b/OpenT2/appsettings.json
@@ -9,5 +9,9 @@
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
+    "Zipkin": {
+      "ServiceName": "zipkin-test",
+      "Endpoint": "http://localhost:9411/api/v2/spans"
+    },
     "AllowedHosts": "*"
   }
