--- a/OpenT2/OpenT2.csproj
+++ b/OpenT2/OpenT2.csproj
@@ -19,7 +19,6 @@
     <PackageReference Include="OpenTelemetry.Api" Version="1.1.0-rc1"/>
     <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.0.1"/>
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc6"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNet" Version="1.0.0-rc6"/>
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc6"/>
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc6"/>
     <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.0.0-rc6"/>
@@ -28,5 +27,6 @@
     <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.1.0-rc1"/>
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.1.0-rc1"/>
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0-rc1"/>
+    <PackageReference Include="OpenTelemetry.Contrib.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta2"/>
   </ItemGroup>
 </Project>
