--- a/UI/jobs-ui/package.json
+++ b/UI/jobs-ui/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@opentelemetry/api": "^1.0.2",
+    "@opentelemetry/context-zone": "^0.24.0",
+    "@opentelemetry/core": "^0.24.0",
+    "@opentelemetry/exporter-zipkin": "^0.24.0",
+    "@opentelemetry/instrumentation": "^0.24.0",
+    "@opentelemetry/instrumentation-user-interaction": "^0.24.0",
+    "@opentelemetry/sdk-node": "^0.24.1-alpha.31",
+    "@opentelemetry/sdk-trace-base": "^0.24.1-alpha.4",
+    "@opentelemetry/tracing": "^0.24.0",
+    "@opentelemetry/web": "^0.24.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,7 +23,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.3.5",
