--- a/UI/jobs-ui/package.json
+++ b/UI/jobs-ui/package.json
@@ -8,16 +8,18 @@
     "@opentelemetry/core": "^0.24.0",
     "@opentelemetry/exporter-zipkin": "^0.24.0",
     "@opentelemetry/instrumentation": "^0.24.0",
+    "@opentelemetry/instrumentation-http": "^0.24.0",
     "@opentelemetry/instrumentation-user-interaction": "^0.24.0",
     "@opentelemetry/sdk-node": "^0.24.1-alpha.31",
     "@opentelemetry/sdk-trace-base": "^0.24.1-alpha.4",
+    "@opentelemetry/sdk-trace-web": "^0.24.1-alpha.4",
     "@opentelemetry/tracing": "^0.24.0",
     "@opentelemetry/web": "^0.24.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.16",
+    "@types/node": "^16.6.2",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
